# flatr

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_runner.txt  setup.cfg  setup.py
data/: config_temp.json
example/: config_temp.json  flatr_example.py
examples/: config_temp.json  flatr_example.py
flatr/: __init__.py  setup.py
flatr/sites/: __init__.py  grantproperty.py  gumtree.py  listing.py  onthemarket.py  rightmove.py  site.py  site_temp.py  spareroom.py  zoneletting.py  zoopla.py
flatr/utils/: email_client.py
runner/: .gitignore  email_client.py  updater.py
src/: config_temp.json  email_client.py  flatr.py  flatr_example.py  gumtree.py  listing.py  onthemarket.py  rightmove.py  site_temp.py  spareroom.py  zoneletting.py  zoopla.py
src/flatr/: __init__.py
src/flatr/sites/: __init__.py  domus.py  grantproperty.py  gumtree.py  listing.py  murrayandcurrie.py  onthemarket.py  rightmove.py  site.py  site_temp.py  spareroom.py  zoneletting.py  zoopla.py
src/flatr/utils/: __init__.py  email_client.py
templates/: site_temp.py
tests/: test_listing.py  test_site_responses.py  test_sites.py
