[metadata]
name = flatr
version = 1.0.0
license = MIT
description = Webscraping package for flat hunting
long_description = file: README.rst
author = Mario Mihaly
author_email = mihaly.mario98@gmail.com
classifiers=
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
   pandas>=1
   gspread>=5
   cachetools>=4
   requests>=2
   beautifulsoup4>=4
python_requires = >= 3.6
zip_safe = no

[options.packages.find]
where=src

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
flatr = py.typed

[flake8]
max-line-length = 160
